[package]
name = "sukusho"
version = "0.1.0"
edition = "2024"
description = "Windows screenshot manager - like Screenie for macOS"
authors = ["ssut"]

[dependencies]
# GUI Framework - GPUI (Zed's GPU-accelerated UI)
gpui = "0.2"
gpui-component = "0.5.0"

# System Tray
tray-icon = "0.19"
muda = "0.16"

# Global Hotkeys
global-hotkey = "0.6"

# File Watching
notify = "8"
notify-debouncer-full = "0.5"

# Windows APIs
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
]}
windows-core = "0.58"

# Image Processing - avoid zune-jpeg which has edition 2024 issues
image = { version = "0.24", features = ["png", "jpeg", "webp"] }
fast_image_resize = "4"

# Async & Threading
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
futures = "0.3"

# Vector Search & Embeddings
lancedb = "0.23.1"
arrow-schema = "56"
arrow-array = "56"
fastembed = "5.6"

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
raw-window-handle = "0.6"
single-instance = "0.3"
filetime = "0.2"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
